--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- To add a google font and paste the link -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:300,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cabin+Condensed" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sue+Ellen+Francisco" rel="stylesheet">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/beon" type="text/css"/>
     <!-- Favicon––––––––––––––––––––––––––– -->
     <link rel="icon" type="image/png" href="images/favicon.png">
@@ -58,7 +59,8 @@
         <!-- /.container-fluid -->
     </nav>
     <!-- Page Content -->
-    <div id="top">  
+    <div id="top"> 
+        <h1> Hello!</h1>
     </div>
 
     <!--beginning of about section -->
