--- a/index.html
+++ b/index.html
@@ -62,30 +62,29 @@
     <div id="top"> 
         <h1> Hello!</h1>
     </div>
-
     <!--beginning of about section -->
-    <div id="about">
-        <div class="container">
-            <h2> ABOUT ME</h2>
-            
-            <div class="row">
-                <!--content goes here-->
-                <div class="col-sm-1 col-sm-offset-1">             
-                    <!--left part-->
-                                       
-                </div>
-                <!--end of left-->
-                <div class="col-sm-8">  
-                    <!--right part-->
-                    <br>
-                    <p>My name is Mackenzie Garrett and I am currently a senior at the University of Michigan. I graduate this May, and I am searching for full time employment. I am majoring in communication studies, and I am interested in a career in marketing.</p>
+    <div class="container" id = "about">
+        <div class="row">
+            <!--content goes here-->
+            <div class="col-sm-3 col-sm-offset-2">
+                <!--left part-->
+                <img class="img-circle img-responsive" src="img/me.jpg" />
+            </div>
+            <!--end of left-->
+
+            <div class="col-sm-6">
+                <h2>About Me</h2>
+                <!--right part-->
+                 <p>My name is Mackenzie Garrett and I am currently a senior at the University of Michigan. I graduate this May, and I am searching for full time employment. I am majoring in communication studies, and I am interested in a career in marketing.</p>
                     <br><a class="btn btn-default" href="Mackenzie Garrett Resume Jan 2017.pdf" target="_blank">Resume</a>
-                </div>
-                <!-- end of right side-->
-            </div>           
+            </div>
+            <!--            end of right side-->
+
+
+
         </div>
-        <!--end of about container-->
     </div>
+    <!--end of about container-->
     <div id="portfolio">
     <h1> My Work </h1><br>
     <div class="container">
