--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <h1>About Me</h1>
             <div class="col-sm-3 col-sm-offset-3">
                 <!--left part-->
-                <img class="img-circle img-responsive" src="img/me.jpg" />
+                <img class="img-responsive" src="img/flowme.svg" />
             </div>
             <!--end of left-->
 
