--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
         <h1> Hello!</h1>
     </div>
     <!--beginning of about section -->
-    <div class="container" id = "about">
+    <div id="about">
+    <div class="container">
         <div class="row">
             <!--content goes here-->
             <h1>About Me</h1>
@@ -84,6 +85,7 @@
 
 
         </div>
+    </div>
     </div>
     <!--end of about container-->
     <div id="portfolio">
