--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
     </div>
     <!--beginning of about section -->
     <div id="about">
-    <div class="container">
+        <h1> hello! </h1>
+    </div>
+    <div class="container" id="about">
         <div class="row">
             <!--content goes here-->
             <h1>About Me</h1>
@@ -86,7 +88,7 @@
 
         </div>
     </div>
-    </div>
+    
     <!--end of about container-->
     <div id="portfolio">
     <h1> My Work </h1><br>
