--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
         
         <!--        end of row-->
         <!-- Skill bars -->
+        <div id="portfolio">
         <h1> Skills </h1><br>
             <div class="container">
                 <div class="row">
@@ -151,8 +152,9 @@
                     <progress value="20" max="100"></progress><span>Javascript</span>
                     </section>
                     <br>
-                </div>
+               </div>  
             </div>
+                </div>
         </div>
     </div>
     <!--    end of the portfolio div-->
@@ -163,7 +165,7 @@
         <h2 class="text-center phone"> 586-242-4372</h2>
         <div class="row">
             <div class="col-sm-6 col-sm-offset-3">
-                <p class="text-center email"> <a href="mailto:gmackenz@umich.edu">gmackenz@umich.edu</p></a>
+                <p class="text-center email"> <a href="mailto:gmackenz@umich.edu">gmackenz@umich.edu</a></p>
                 <div class="row">
                 </div>
             </div>
