--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
     <!-- Footer Content -->
     <footer class="container-fluid text-center page-scroll" id="contact">
         <!--    contact-->
-        <h3 class="text-center">contact</h3>
-        <h2 class="text-center phone"> 586-242-4372</h2><h2> | </h2> <p class="text-center email"> <a href="mailto:gmackenz@umich.edu">gmackenz@umich.edu</a></p>
+        <h2 class="text-center">Contact</h2>
+        <h3 class="text-center phone"> 586-242-4372</h3><h3> | </h3> <p class="text-center email"> <a href="mailto:gmackenz@umich.edu">gmackenz@umich.edu</a></p>
         <div class="row">
             <div class="col-sm-6 col-sm-offset-3">
                 <p class="text-center email"> <a href="mailto:gmackenz@umich.edu">gmackenz@umich.edu</a></p>
