--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
     <div class="container" id="about">
         <div class="row">
             <!--content goes here-->
-            <h1>About Me</h1>
             <div class="col-sm-3">
             <!--left part-->
             </div>
@@ -86,7 +85,7 @@
     <div id="portfolio">
     <div class="container">
         <div class="row">
-            <h1> My Work </h1><br>
+            <br><h1> My Work </h1><br>
             <div class="col-sm-4 portfolio-item">
                 <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
@@ -125,7 +124,7 @@
         <!-- Skill bars-->
         <div class="row">
             <h1> Skills </h1><br>
-            <div class="col-sm-6">
+            <div class="col-sm-5 col-sm-offset-1">
             <section id="skills">
                 <progress value="100" max="100"></progress><span>Microsoft Office</span>
                 <progress value="70" max="100"></progress><span>Google Analytics</span>
@@ -133,7 +132,7 @@
                 <progress value="80" max="100"></progress><span>Photoshop/Illustrator</span>
             </section>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-5 col-sm-offset-1">
             <section id="skills">
                 <progress value="70" max="100"></progress><span>HTML/CSS</span>
                 <progress value="60" max="100"></progress><span>Python</span>
@@ -151,7 +150,7 @@
     <footer class="container-fluid text-center page-scroll" id="contact">
         <!--    contact-->
         <h2 class="text-center">Contact</h2>
-        <h3 class="text-center phone"> 586-242-4372</h3>
+        <h3 class="text-center phone"> 586-242-4372 | <a href="mailto:gmackenz@umich.edu">gmackenz@umich.edu</a></h3>
         <div class="row">
             <div class="col-sm-6 col-sm-offset-3">
                 <p class="text-center email"> <a href="mailto:gmackenz@umich.edu">gmackenz@umich.edu</a></p>
