--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
         <h1> Hello!</h1>
     </div>
     <!--beginning of about section -->
-    <div class="container" id="about">
+    <div id="about">
+    <div class="container">
         <div class="row">
             <!--content goes here-->
             <div class="col-sm-3">
@@ -79,6 +80,7 @@
             <!--            end of right side-->
         </div>
         <!-- end of row -->
+    </div>
     </div>
     <!--end of about container-->
     
@@ -124,7 +126,7 @@
         <!-- Skill bars-->
         <div class="row">
             <h1> Skills </h1><br>
-            <div class="col-sm-5 col-sm-offset-1">
+            <div class="col-sm-5">
             <section id="skills">
                 <progress value="100" max="100"></progress><span>Microsoft Office</span>
                 <progress value="70" max="100"></progress><span>Google Analytics</span>
@@ -132,7 +134,7 @@
                 <progress value="80" max="100"></progress><span>Photoshop/Illustrator</span>
             </section>
             </div>
-            <div class="col-sm-5 col-sm-offset-1">
+            <div class="col-sm-5">
             <section id="skills">
                 <progress value="70" max="100"></progress><span>HTML/CSS</span>
                 <progress value="60" max="100"></progress><span>Python</span>
@@ -151,13 +153,8 @@
         <!--    contact-->
         <h2 class="text-center">Contact</h2>
         <h3 class="text-center phone"> 586-242-4372 | <a href="mailto:gmackenz@umich.edu">gmackenz@umich.edu</a></h3>
-        <div class="row">
-            <div class="col-sm-6 col-sm-offset-3">
-                <p class="text-center email"> <a href="mailto:gmackenz@umich.edu">gmackenz@umich.edu</a></p>
-                <div class="row">
-                </div>
-            </div>
-        </div>
+        <br>
+        
         <p class="text-center">Designed by <a target="_blank" href="#">Mackenzie Garrett</a></p>
     </footer>
     <!--End of footer section -->
