--- a/index.html
+++ b/index.html
@@ -152,9 +152,8 @@
     <footer class="container-fluid text-center page-scroll" id="contact">
         <!--    contact-->
         <h2 class="text-center">Contact</h2>
-        <h3 class="text-center phone"> 586-242-4372 | <a href="mailto:gmackenz@umich.edu">gmackenz@umich.edu</a></h3>
+        <h3 class="text-center phone"> 586-242-4372 ||  <a href="mailto:gmackenz@umich.edu">gmackenz@umich.edu</a></h3>
         <br>
-        
         <p class="text-center">Designed by <a target="_blank" href="#">Mackenzie Garrett</a></p>
     </footer>
     <!--End of footer section -->
