--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
     <div class="container">
         <div class="row">
             <!--content goes here-->
-            <div class="col-sm-3">
+            <div class="col-sm-3 col-sm-offset-1">
+                <img src="img/flowme.svg" class="img-responsive">
             <!--left part-->
             </div>
             <!--end of left-->
@@ -126,7 +127,7 @@
         <!-- Skill bars-->
         <div class="row">
             <h1> Skills </h1><br>
-            <div class="col-sm-5">
+            <div class="col-sm-5 col-sm-offset-2 ">
             <section id="skills">
                 <progress value="100" max="100"></progress><span>Microsoft Office</span>
                 <progress value="70" max="100"></progress><span>Google Analytics</span>
