--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             <div class="col-sm-5  col-sm-offset-1">
             <!--right part-->
             <h1>About Me</h1>
-            <p>My name is Mackenzie Garrett and I am currently a senior at the University of Michigan. I am graduating this May with a degree in communications and am seeking full-time job in marketing. I've also taken an interest in computer programming, and I have taken several courses within the past few semesters. I hope to utilize the coding skills as well as my creativity in a digital marketing position. I used HTML, CSS, Bootstrap, and Javascript to create this site, and I also created the graphics via Adobe Illustrator.</p>
-            <p>When I am not hunched over my laptop doing school work, you can find me outside running or lounging somewhere with a book. I spent my last two summers in Seattle, where I fell in love with hiking, and I am currently itching to get out of Michigan to find some more mountains to climb.</p>
+            <p>My name is Mackenzie Garrett, and I am currently a senior at the University of Michigan. I am graduating this May with a degree in communications and am seeking a full-time job in marketing. I've also taken an interest in computer programming, and I have taken several coding courses within the past few semesters. I hope to utilize the coding skills I have learned, as well as my creative skills, in a digital marketing position. I used HTML, CSS, Bootstrap, and Javascript to create this site, and I also created the graphics via Adobe Illustrator.</p>
+            <p>When I am not hunched over my laptop doing school work, you can find me outside running or lounging somewhere with a book. I spent my last two summers in Seattle, where I fell in love with hiking, and I am currently itching to get out of Michigan to find some more mountains to climb!</p>
             <br><a class="btn btn-default" href="Mackenzie Garrett Resume .pdf" target="_blank">Resume</a>
             </div>
             <!--            end of right side-->
