--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </ul>
                 <ul class="nav navbar-nav pull-right">
                     <li class="page-scroll"><a href="#about">About</a></li>
-                    <li class="page-scroll"><a href="#portfolio">Portfolio</a></li>
+                    <li class="page-scroll"><a href="#portfolio">My Work</a></li>
                     <li class="page-scroll"><a href="#contact">Contact</a></li>
                 </ul>   
             </div>
@@ -89,6 +89,7 @@
     <div class="container">
         <div class="row">
             <br><h1> My Work </h1><br>
+            <p>Here are a few school projects of mine that demonstrate some of the skills I've acquired while at school.</p>
             <div class="col-sm-4 portfolio-item">
                 <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
